--- a/html/politicas.html
+++ b/html/politicas.html
@@ -62,17 +62,44 @@
         <!-- Contenido principal -->
 
         <main>
-            <h1 class="sub-pag">Politicas</h1>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Exercitationem vero dolore esse quas atque officiis architecto nobis saepe, delectus ratione natus minima quo reiciendis ex quod obcaecati autem vitae perspiciatis?</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, exercitationem. Sint ipsum officia magnam sequi rem, expedita maxime repellendus nostrum optio dolor voluptas voluptatum illo error officiis, ut, ea deleniti!</p>
+            <h1 class="sub-pag">Politicas Generales</h1>
+                <p>
+                    Bienvenido/a a <u>Litufiguras</u>, tienda online dedicada a la venta de figuras de anime, mangas y manhwas. Al comprar en el sitio aceptas estos Términos y Condiciones, elaborados según la Ley 19.496 de Protección al Consumidor.</p>
+                <p>
+                    <u>Uso del sitio:</u> Debes entregar información real, evitar actividades fraudulentas y no interferir con el funcionamiento de la web.
+                <p>
+                    <u>Precios y pagos:</u> Los valores se muestran en pesos chilenos (CLP) e incluyen IVA cuando corresponda. Podemos modificar precios antes de la compra. Aceptamos transferencia, Webpay, tarjetas de crédito/débito.</p>
+                <p>
+                    <u>Pre-ventas:</u> Algunas figuras se importan y las fechas de llegada son estimadas. Pueden existir retrasos por logística o aduanas; al reservar aceptas estas condiciones.</p>
+                <p>
+                    <u>Envíos:</u> Usamos Chilexpress, Starken, Bluexpress y Correos Chile. Los plazos dependen del transportista. Una vez entregado el paquete al courier, este asume la responsabilidad del traslado, aunque ayudaremos con reclamos si fuese necesario.</p>
+                <p>
+                    <u>Garantía legal:</u> Si un producto presenta falla de fábrica, aplican 6 meses de garantía según la ley. No cubre daños por manipulación, desgaste normal ni detalles estéticos en empaques provocados por transporte.</p>
+                <p>
+                    <u>Derecho a retracto:</u> No aplica derecho a retracto en nuestra tienda, a menos que se indique lo contrario en situaciones específicas detalladas en las Politicas de reembolso.</p>
+                <p>
+                    <u>Modificaciones:</u> Podemos actualizar productos, precios o políticas sin previo aviso.</p>
             
             <h2>Politica de privacidad</h2>
-            <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Optio quasi numquam autem nulla modi. Mollitia natus error placeat perspiciatis cupiditate eligendi, modi excepturi quis deleniti odio id veniam, perferendis expedita?</p>
+                <p>
+                    En Litufiguras protegemos tus datos según la Ley 19.628. Recopilamos información de contacto (nombre, email, dirección, teléfono), datos de compra e información técnica como cookies o IP. Usamos estos datos para gestionar pedidos, envíos, pagos, soporte, promociones opcionales y mejoras del sitio.</p>
+                <p>
+                    Tus datos se almacenan en servidores seguros. Solo se comparten con empresas de envío y pasarelas de pago. No vendemos información a terceros. Puedes solicitar acceso, modificación o eliminación de tus datos, y pedir el cese de mensajes promocionales escribiendo a <u>clientes@litufiguras.cl</u>.
+                </p>
+                <p>
+                    Utilizamos cookies para mejorar navegación, guardar sesión y mantener tu carrito. Puedes desactivarlas en tu navegador cuando quieras.
+                </p>
             
             <h2>Politica de reembolso</h2>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Quam, perspiciatis? Voluptatibus odio excepturi accusantium vitae facere exercitationem officiis assumenda ipsam quidem quaerat laudantium illum ea, fuga aperiam, dolore expedita doloribus!</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus veritatis tempora magnam eum asperiores. Illum dignissimos, nemo beatae necessitatibus qui quos asperiores atque nobis odit minima, unde dolorem eligendi? Quibusdam.</p>
-            <p>Lorem ipsum dolor, sit amet consectetur adipisicing elit. A ipsam esse accusantium, accusamus doloremque repellat soluta facere illum eum voluptatibus inventore aspernatur dignissimos delectus quae. Sed possimus aut impedit deleniti?</p>
+                <p>
+                    Nos regimos por la Ley del Consumidor. Si un producto presenta falla de fábrica, cuentas con 6 meses para pedir cambio, reparación o reembolso. El producto debe mantenerse en buen estado general y con sus accesorios.
+                </p>
+                <p>
+                    No realizamos reembolsos por figuras abiertas, daños menores en cajas (propios del transporte internacional), productos en oferta, desgaste por uso o mangas/manhwas con daños posteriores a la entrega. Las pre-ventas no se reembolsan salvo cancelación del proveedor o imposibilidad de entrega.
+                </p>
+                <p>
+                    Si recibes un artículo incorrecto, cubrimos todos los costos de cambio. Para solicitar devoluciones o cambios por este motivo, debes contactarnos a <u>contacto@litufiguras.cl</u> dentro de 7 días hábiles desde la recepción. Si la falla es responsabilidad nuestra, pagamos el envío; si no, el costo es del cliente.
+                </p>
 
         </main>
 
