--- a/index.html
+++ b/index.html
@@ -68,10 +68,13 @@
                         <img src="./img/general/banner.png" class="d-block w-100" alt="banner con las proximas figuras de animes">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/figuras/luffyg5-v-kaido.png" class="d-block w-100" alt="imagen figura luffy gear 5 vs kaido">
+                        <img src="./img/general/solo-jin.jpg" class="d-block w-100" alt="figura solo leveling, sung jin-woo con sus sombras jefes">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/figuras/ace.png" class="d-block w-100" alt="imagen figura ace brazos extendidos hacia los lados">
+                        <img src="./img/general/luffy-vs-katakuri.jpg" class="d-block w-100" alt="figura luffy snake-man vs katakuri">
+                    </div>
+                    <div class="carousel-item">
+                        <img src="./img/general/BDS-Studio-Zoro.jpg" class="d-block w-100" alt="figura zoro atacando, version onigashima">
                     </div>
                 </div>
                 <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
@@ -88,12 +91,12 @@
             <h2>Destacados</h2>
             <section class="productos">
                 <div class="producto">
-                    <img src="./img/figuras/sanji-v-queen.png"  alt="imagen figura sanji ifrit vs queen">
+                    <img src="./img/figuras/sanji-v-queen.png"  alt="imagen figura sanji ifrit vs queen modo zoan">
                     <p>Sanji Ifrit Jambe vs Queen </p>
                 </div>
 
                 <div class="producto">
-                    <img src="./img/figuras/luffyg5-v-kaido.png"  alt="imagen figura luffy gear 5 vs kaido">
+                    <img src="./img/figuras/luffyg5-v-kaido.png"  alt="imagen figura luffy gear 5 vs kaido modo bestia">
                     <p>Onigashima Luffy G5 vs Kaido</p>
                 </div>
 
