--- a/html/figuras.html
+++ b/html/figuras.html
@@ -62,36 +62,67 @@
                 <div class="producto">
                     <img src="../img/figuras/sanji-v-queen.png" alt="imagen figura sanji ifrit vs queen">
                     <p>Sanji Ifrit Jambe vs Queen</p>
+                    <p class="precio">$900.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/funko-gaara-special.png" alt="imagen figura funko pop gaara edicion especial">
                     <p>FunkoPop Gaara Special Edition</p>
+                    <p class="precio">$20.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/naruto-accion.png" alt="imagen figura naruto shippuden articulada">
                     <p>Naruto Anime Heroes</p>
+                    <p class="precio">$25.000 CLP</p>
+                </div>
+
+                <div class="producto">
+                    <img src="../img/figuras/luffyg5-v-kaido.png"  alt="imagen figura luffy gear 5 vs kaido modo bestia">
+                    <p>Onigashima Luffy G5 vs Kaido</p>
+                    <p class="precio">$1.100.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/obito-sixpath.png" alt="imagen figura obito seis caminos">
                     <p>Obito Six Paths</p>
+                    <p class="precio">$45.000 CLP</p>
+                </div>
+
+                <div class="producto">
+                    <img src="../img/figuras/genos-regular.png"  alt="imagen figura genos lanzando puño con explosion">
+                    <p>Genos Regular Ver.</p>
+                    <p class="precio">$60.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/funko-shinobu.png" alt="imagen figura funko pop shinobu kocho base mariposas">
                     <p>FunkoPop Shinobu Kocho</p>
+                    <p class="precio">$18.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/zoro-accion.png" alt="imagen figura zoro articulada">
                     <p>Zoro Anime Heroes</p>
+                    <p class="precio">$25.000 CLP</p>
+                </div>
+
+                <div class="producto">
+                    <img src="../img/figuras/killua-spark.png"  alt="imagen figura killua godspeed">
+                    <p>Killua Godspeed</p>
+                    <p class="precio">$120.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/figuras/ace.png" alt="imagen figura ace brazos extendidos hacia los lados">
                     <p>Portgas D. Ace</p>
+                    <p class="precio">$45.000 CLP</p>
+                </div>
+
+                <div class="producto">
+                    <img src="../img/figuras/goku-ultra.png"  alt="imagen figura goku ultra instinto">
+                    <p>Goku Ultra Instinct</p>
+                    <p class="precio">$250.000 CLP</p>
                 </div>
 
             </section>
