--- a/html/lectura.html
+++ b/html/lectura.html
@@ -62,36 +62,43 @@
                 <div class="producto">
                     <img src="../img/mangas/op-vol2.png"  alt="portada manga one piece volumen 2 con luffy y buggy">
                     <p>One Piece Vol.2</p>
+                    <p>$10.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/mangas/csm-vol4.png"  alt="portada manga chainsaw man volumen 4 con aki hayakawa salpicado con sangre">
                     <p>Chainsaw Man Vol.4</p>
+                    <p>$12.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/mangas/db-vol2.png" alt="portada manga dragon ball volumen 2 con goku y bulma sobre un pajaro corredor">
                     <p>Dragon Ball Vol.2</p>
+                    <p>$10.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/manhwas/solo-vol4.png"  alt="portada manhwa solo leveling volumen 4 con sung jin-woo mirando hacia un lado ">
                     <p>Solo Leveling Vol.4</p>
+                    <p>$12.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/mangas/bknh-vol1.png"  alt="portada manga boku no hero volumen 1 con izuku midoriya corriendo y all might">
                     <p>Boku No Hero Vol.1</p>
+                    <p>$10.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/mangas/op-vol3.png"  alt="portada manga one piece volumen 3 con luffy y zoro en posicion de pelea sobre un bote">
                     <p>One Piece Vol.3</p>
+                    <p>$10.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="../img/manhwas/tbae-vol2.png"  alt="portada manhwa the beginning after the end volumen 2 con arthur leywin sosteniendo un huevo de colores">
                     <p>The Beginning After The End Vol.2</p>
+                    <p>$8.000 CLP</p>
                 </div>
 
             </section>
