--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
                 <img src="./img/general/logo-transparente.png"
                     alt="logo de litufiguras, tipografia estilo manga con un gato espadachin inspirado en Zoro de One Piece">
             </a>
-            <!-- boton hamburguesa solo visible en mobile -->
+            <!-- boton hamburguesa solo visible en mobile y tablet -->
             <button class="navbar-toggler d-lg-none hamburger-btn d-lg-none"
                     type="button"
                     data-bs-toggle="collapse"
@@ -68,7 +68,7 @@
                         <img src="./img/general/banner.png" class="d-block w-100" alt="banner con las proximas figuras de animes">
                     </div>
                     <div class="carousel-item">
-                        <img src="./img/general/solo-jin.jpg" class="d-block w-100" alt="figura solo leveling, sung jin-woo con sus sombras jefes">
+                        <img src="./img/general/solo-jin.jpg" class="d-block w-100" alt="figura solo leveling, sung jin-woo y sus sombras jefes">
                     </div>
                     <div class="carousel-item">
                         <img src="./img/general/luffy-vs-katakuri.jpg" class="d-block w-100" alt="figura luffy snake-man vs katakuri">
@@ -93,36 +93,43 @@
                 <div class="producto">
                     <img src="./img/figuras/sanji-v-queen.png"  alt="imagen figura sanji ifrit vs queen modo zoan">
                     <p>Sanji Ifrit Jambe vs Queen </p>
+                    <p class="precio">$900.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="./img/figuras/luffyg5-v-kaido.png"  alt="imagen figura luffy gear 5 vs kaido modo bestia">
                     <p>Onigashima Luffy G5 vs Kaido</p>
+                    <p class="precio">$1.100.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="./img/figuras/genos-regular.png"  alt="imagen figura genos lanzando puño con explosion">
                     <p>Genos Regular Ver.</p>
+                    <p class="precio">$60.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="./img/figuras/obito-sixpath.png"  alt="imagen figura obito seis caminos">
                     <p>Obito Six Paths</p>
+                    <p class="precio">$900.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="./img/figuras/killua-spark.png"  alt="imagen figura killua godspeed">
                     <p>Killua Godspeed</p>
+                    <p class="precio">$120.000 CLP</p>
                 </div>
 
                 <div class="producto">
                     <img src="./img/figuras/goku-ultra.png"  alt="imagen figura goku ultra instinto">
                     <p>Goku Ultra Instinct</p>
+                    <p class="precio">$900.000 CLP</p>
                 </div>
                 
                 <div class="producto">
                     <img src="./img/figuras/ace.png"  alt="imagen figura ace brazos extendidos hacia los lados">
                     <p>Portgas D. Ace</p> 
+                    <p class="precio">$900.000 CLP</p>
                 </div>
             </section>
         </main>
