--- a/html/figuras.html
+++ b/html/figuras.html
@@ -38,8 +38,22 @@
             </button>
 
             <!-- menu para desktop -->
-            <nav class="estantes d-none d-lg-flex">
-                <a href="./lectura.html" class="text-decoration-none text-light">Estante de Lectura</a>
+            <nav class="estantes-figuras d-none d-lg-flex">
+                <a href="./lectura.html" class="text-decoration-none text-light">
+                    Estante de Lectura
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Todos los Productos
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Resina
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Acción
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    FunkoPop
+                </a>
             </nav>
         </header>
 
@@ -51,6 +65,18 @@
                     <a href="./lectura.html" class="list-group-item list-group-item-action">
                     Estante de Lectura
                     </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Todos los productos
+                    </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Resina
+                    </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Acción
+                    </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    FunkoPop
+                    </a>
                 </div>
             </div>
         </div>
@@ -58,7 +84,7 @@
         <!-- contenido principal -->
         <main>
             <h1 class="sub-pag">Figuras</h1>
-            <section class="productos">
+            <div class="productos">
                 <div class="producto">
                     <img src="../img/figuras/sanji-v-queen.png" alt="imagen figura sanji ifrit vs queen">
                     <p>Sanji Ifrit Jambe vs Queen</p>
@@ -125,7 +151,7 @@
                     <p class="precio">$250.000 CLP</p>
                 </div>
 
-            </section>
+            </div>
 
         </main>
 
