--- a/html/lectura.html
+++ b/html/lectura.html
@@ -38,8 +38,19 @@
             </button>
 
             <!-- menu para desktop -->
-            <nav class="estantes d-none d-lg-flex">
-                <a href="./figuras.html" class="text-decoration-none text-light">Estante de Figuras</a>
+            <nav class="estantes-lectura d-none d-lg-flex">
+                <a href="./figuras.html" class="text-decoration-none text-light">
+                    Estante de Figuras
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Todos los productos
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Mangas
+                </a>
+                <a href="" class="text-decoration-none text-light">
+                    Manhwas
+                </a>
             </nav>
         </header>
 
@@ -51,6 +62,15 @@
                     <a href="./figuras.html" class="list-group-item list-group-item-action">
                     Estante de Figuras
                     </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Todos los productos
+                    </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Mangas
+                    </a>
+                    <a href="" class="list-group-item list-group-item-action">
+                    Manhwas
+                    </a>
                 </div>
             </div>
         </div>
@@ -58,7 +78,7 @@
         <!-- contenido principal -->
         <main>
             <h1 class="sub-pag">Lectura</h1>
-            <section class="productos">
+            <div class="productos">
                 <div class="producto">
                     <img src="../img/mangas/op-vol2.png"  alt="portada manga one piece volumen 2 con luffy y buggy">
                     <p>One Piece Vol.2</p>
@@ -101,7 +121,7 @@
                     <p>$8.000 CLP</p>
                 </div>
 
-            </section>
+            </div>
 
         </main>
 
