--- a/index.html
+++ b/index.html
@@ -38,9 +38,13 @@
             </button>
 
             <!-- menu para desktop -->
-            <nav class="estantes d-none d-lg-flex">
-                <a href="./html/figuras.html" class="text-decoration-none text-light">Estante de Figuras</a>
-                <a href="./html/lectura.html" class="text-decoration-none text-light">Estante de Lectura</a>
+            <nav class="estantes-home d-none d-lg-flex">
+                <a href="./html/figuras.html" class="text-decoration-none text-light">
+                    Estante de Figuras
+                </a>
+                <a href="./html/lectura.html" class="text-decoration-none text-light">
+                    Estante de Lectura
+                </a>
             </nav>
         </header>
 
@@ -89,7 +93,7 @@
         
 
             <h2>Destacados</h2>
-            <section class="productos">
+            <div class="productos">
                 <div class="producto">
                     <img src="./img/figuras/sanji-v-queen.png"  alt="imagen figura sanji ifrit vs queen modo zoan">
                     <p>Sanji Ifrit Jambe vs Queen </p>
@@ -131,7 +135,7 @@
                     <p>Portgas D. Ace</p> 
                     <p class="precio">$900.000 CLP</p>
                 </div>
-            </section>
+            </div>
         </main>
 
         <footer>
